# del-raycast

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
asset/material-testball/: sphere.pbrt
asset/veach-mis/: scene-v4.pbrt  scene-v4_rgb.pbrt
del-raycast-candle/: Cargo.toml
del-raycast-candle/src/: lib.rs  pix2depth.rs  pix2tri.rs  raycast_trimesh.rs  render_meshtri2_vtxcolor.rs  render_meshtri3_depth.rs  silhouette.rs
del-raycast-core/: Cargo.toml
del-raycast-core/examples/: 00_smallpt.rs  01_analytic_polygonal_light.rs  02_cornell_box.rs  03_material_test_ball.rs  04_env_light.rs  05_trimesh3.rs  06_silhouette.rs  07_anti_aliasing.rs  08_veach_mis.rs
del-raycast-core/src/: anti_aliased_silhouette.rs  area_light.rs  bxdf.rs  cam2.rs  cam3.rs  cam_pbrt.rs  env_map.rs  io_pfm.rs  layered_material.rs  lib.rs  material.rs  monte_carlo_integrator.rs  parse_pbrt.rs  raycast_trimesh2.rs  raycast_trimesh3.rs  sampling.rs  shape.rs  silhouette.rs  textures.rs
del-raycast-cudarc/: Cargo.toml
del-raycast-cudarc-kernel/: Cargo.toml  build.rs
del-raycast-cudarc-kernel/src/: dda.h  lib.rs  pix2depth.cu  pix2tri.cu  silhouette.cu
del-raycast-cudarc/examples/: 01_raycast_trimesh3.rs
del-raycast-cudarc/src/: lib.rs  pix2depth.rs  pix2tri.rs  silhouette.rs
del-raycast-gl/examples/: 00_gl__fullscrntex.rs
examples/: 00_smallpt.rs  01_analytic_polygonal_light.rs  02_cornell_box.rs  03_material_test_ball.rs  04_env_light.rs  Cargo.toml
examples-cudarc-gl/: Cargo.toml
examples-cudarc-gl/examples/: 01_cudagl_meshtri3_texture.rs
examples-gl/: Cargo.toml
examples-gl/examples/: 00_gl__fullscrntex.rs
examples/examples/: 00_gl__fullscrntex.rs  01_cudagl_meshtri3_texture.rs
src/: cam3.rs  cam_pbrt.rs  io_pfm.rs  lib.rs  parse_pbrt.rs  sampling.rs
