[workspace]
members = ["del-raycast-core", "del-raycast-gl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "hogehoge"
license = "MIT"

[workspace.dependencies]
nalgebra = "0.33.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
num-traits = "0.2.19"
image = "0.25.5"
itertools = "0.13.0"
anyhow = "1.0.93"
ply-rs = "0.1.3"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
rayon = "1.10.0"

# internal
del-raycast-core = {  path = "del-raycast-core" }

# for development
# pbrt4 = { path = "../pbrt4" }
# del-geo-core = { path = "../del-geo/del-geo-core" }
# del-geo-nalgebra = { path="../del-geo/del-geo-nalgebra" }
# del-msh-core = { path = "../del-msh/del-msh-core" }
# del-canvas-image = {path = "../del-canvas/del-canvas-image"}n
# del-gl-core = { path = "../del-gl/del-gl-core"}
# del-gl-winit-glutin = { path = "../del-gl/del-gl-winit-glutin"}

# for git push
pbrt4 = { git = "https://github.com/nobuyuki83/pbrt4.git" }
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-gl-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-canvas-image = {git="https://github.com/nobuyuki83/del-canvas.git"}
