[workspace]
members = [
    "del-raycast-core",
    "del-raycast-cudarc",
    "examples-gl",
    "examples-cudarc-gl"
]
exclude = ["del-raycast-cudarc-kernel"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "hogehoge"
license = "MIT"

[workspace.dependencies.cudarc]
version = "0.12.1"
features = [
    "std", "cublas", "cublaslt", "curand", "driver", "nvrtc",
    "f16", "cuda-version-from-build-system", "dynamic-linking"]
default-features=false

[workspace.dependencies]
nalgebra = "0.33.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
num-traits = "0.2.19"
image = "0.25.5"
itertools = "0.13.0"
anyhow = "1.0.93"
ply-rs = "0.1.3"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
rayon = "1.10.0"
glutin = "0.32.1"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6.2"
gl_generator = "0.14"
cfg_aliases = "0.2.1"

# internal
del-raycast-core = {  path = "del-raycast-core" }
del-raycast-cudarc = {  path = "del-raycast-cudarc" }
del-raycast-cudarc-kernel = {  path = "del-raycast-cudarc-kernel" }

# for development
# pbrt4 = { path = "../pbrt4" }
# del-geo-core = { path = "../del-geo/del-geo-core" }
# del-geo-nalgebra = { path="../del-geo/del-geo-nalgebra" }
# del-msh-core = { path = "../del-msh/del-msh-core" }
# del-canvas-image = {path = "../del-canvas/del-canvas-image"}
# del-gl-core = { path = "../del-gl/del-gl-core"}
# del-gl-winit-glutin = { path = "../del-gl/del-gl-winit-glutin"}

# for git push
pbrt4 = { git = "https://github.com/nobuyuki83/pbrt4.git" }
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
del-msh-cudarc = { git = "https://github.com/nobuyuki83/del-msh.git", features = ["cuda"]}
del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-gl-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-cudarc = {git="https://github.com/nobuyuki83/del-cudarc.git"}
del-canvas-image = {git="https://github.com/nobuyuki83/del-canvas.git"}
