[workspace]
members = [
    "del-raycast-core",
    "del-raycast-cudarc",
    "del-raycast-candle",
    "examples-gl",
    "examples-cudarc-gl"
]
exclude = ["del-raycast-cudarc-kernel"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "hogehoge"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
repository = "https://github.com/nobuyuki83/del-raycast/"
license = "MIT"

[workspace.dependencies]
nalgebra = "0.33.2"
rand = "0.9.0"
rand_chacha = "0.9.0"
num-traits = "0.2.19"
image = { version = "0.25.5", features = ["png"], default-features = false }
itertools = "0.14.0"
anyhow = "1.0.93"
ply-rs = "0.1.3"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
rayon = "1.10.0"
glutin = "0.32.1"
glutin-winit = "0.5.0"
winit = "0.30.5"
raw-window-handle = "0.6.2"
gl_generator = "0.14"
cfg_aliases = "0.2.1"

# internal
del-raycast-core = {  path = "del-raycast-core" }
del-raycast-cudarc = {  path = "del-raycast-cudarc" }
del-raycast-cudarc-kernel = {  path = "del-raycast-cudarc-kernel" }

# for development
# pbrt4 = { path = "../pbrt4" }
# del-geo-core = { path = "../del-geo/del-geo-core" }
# del-geo-nalgebra = { path="../del-geo/del-geo-nalgebra" }
# del-msh-core = { path = "../del-msh/del-msh-core" }
# del-canvas = {path = "../del-canvas"}
# del-gl-core = { path = "../del-gl/del-gl-core"}
# del-gl-winit-glutin = { path = "../del-gl/del-gl-winit-glutin"}
# del-fem-candle = { path = "../del-fem/del-fem-candle" }

# for git push
pbrt4 = { git = "https://github.com/nobuyuki83/pbrt4.git" }
# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
# del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git"}
# del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
# del-msh-cudarc = { git = "https://github.com/nobuyuki83/del-msh.git", features = ["cuda"]}
# del-fem-ls = {git="https://github.com/nobuyuki83/del-fem.git"}
# del-fem-core = {git="https://github.com/nobuyuki83/del-fem.git"}
# del-fem-candle = {git="https://github.com/nobuyuki83/del-fem.git"}
del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-gl-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
# del-cudarc = {git="https://github.com/nobuyuki83/del-cudarc.git"}
# del-canvas = {git="https://github.com/nobuyuki83/del-canvas.git"}

# for deploy
del-geo-core = "=0.1.33"
del-geo-nalgebra = "=0.1.33"
del-msh-core = "=0.1.37"
del-msh-cudarc = "=0.1.39"
del-msh-candle = "=0.1.39"
del-fem-core = "=0.1.5"
del-fem-ls = "=0.1.5"
del-fem-candle = "=0.1.4"
del-cudarc = "=0.1.2"
candle-core = "=0.8.2"
del-canvas = "=0.1.2"
# for deploy
