[package]
name = "del-raycast-candle"
description = "hgoehoge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
cuda = ["candle-core/cuda", "del-raycast-cudarc/cuda", "del-msh-candle/cuda"]

[dependencies]
rand.workspace = true
anyhow.workspace = true
nalgebra.workspace = true
arrayref.workspace = true
itertools.workspace = true
rayon.workspace = true
del-geo-core.workspace = true
# del-geo-nalgebra.workspace = true
del-canvas.workspace = true
del-msh-core.workspace = true
del-fem-ls.workspace = true
del-fem-core.workspace = true
del-fem-candle.workspace = true
candle-core.workspace = true
del-msh-candle.workspace = true

# for develop/push
del-raycast-core.workspace = true
del-raycast-cudarc.workspace = true

# for deploy




[dev-dependencies]
image.workspace = true