[package]
name = "del-raycast-core"
version.workspace = true
edition.workspace = true

[dependencies]
nalgebra.workspace = true
rand.workspace = true
rand_chacha.workspace = true
num-traits.workspace = true
image.workspace = true
itertools.workspace = true
anyhow.workspace = true
ply-rs.workspace = true
arrayref.workspace = true
slice-of-array.workspace = true
bytemuck = "1.20.0"
rayon.workspace = true


# for development
pbrt4.workspace = true
del-geo-nalgebra.workspace = true
del-geo-core.workspace = true
del-msh-core.workspace = true
del-canvas-image.workspace = true
del-canvas-cpu.workspace = true

# for git push
# pbrt4 = { git = "https://github.com/nobuyuki83/pbrt4.git" }
