[package]
name = "del-raycast-cudarc"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = [
    "dep:del-msh-cudarc",
    "dep:del-cudarc",
    "dep:del-raycast-cudarc-kernel"]

[dependencies]
arrayref.workspace = true
anyhow.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true
del-canvas.workspace = true
del-msh-cudarc = { workspace = true, optional = true }
del-raycast-cudarc-kernel = { workspace = true, optional = true }

# for develop
# del-cudarc = {path="../../del-cudarc", optional = true}

# for push
del-cudarc = {git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}


