[package]
name = "examples-cudarc-gl"
description = "hogehoge"
version.workspace =true
edition.workspace = true
license.workspace = true

[features]
cuda = [
    "dep:cudarc",
    "dep:del-msh-cudarc",
    "del-raycast-cudarc/cuda"]


[dependencies]
anyhow.workspace = true
num-traits.workspace = true
slice-of-array.workspace = true
itertools.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
image.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true
del-gl-core.workspace = true
del-gl-winit-glutin.workspace = true
del-canvas.workspace = true
del-raycast-core.workspace = true

cudarc = { workspace = true, optional = true }
del-msh-cudarc = { workspace = true, optional = true }
del-raycast-cudarc = { workspace = true, optional = true }

[build-dependencies]
gl_generator.workspace = true
cfg_aliases.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true