[package]
name = "examples-gl"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
glutin.workspace = true
glutin-winit.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
image.workspace = true
#
# workspace
del-msh-core.workspace = true
del-geo-core.workspace = true
del-gl-core.workspace = true
del-gl-winit-glutin.workspace = true
del-raycast-core.workspace = true
del-canvas-image.workspace = true

[build-dependencies]
gl_generator.workspace = true
cfg_aliases.workspace = true


