[package]
name = "examples-gl"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[features]
cuda = [
    "dep:del-msh-cudarc",
    "dep:del-cudarc",
    "del-raycast-cudarc/cuda"]

[dependencies]
glutin.workspace = true
glutin-winit.workspace = true
winit.workspace = true
#
# workspace
del-msh-core.workspace = true
del-geo-core.workspace = true
del-gl-winit-glutin.workspace = true
del-raycast-core.workspace = true
del-canvas.workspace = true

del-msh-cudarc = { workspace = true, optional = true }
del-raycast-cudarc = { workspace = true, optional = true }

# for develop
# del-cudarc = {path="../../del-cudarc", optional = true}

# for push
del-cudarc = {git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}


[build-dependencies]
gl_generator.workspace = true
cfg_aliases.workspace = true